# library-service-api

./: .coverage  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py  test_settings.py  urls.py
tests/: conftest.py  test_auth.py  test_authors_books.py  test_borrows.py  test_docs.py
